--- a/template/user/home.html
+++ b/template/user/home.html
@@ -46,9 +46,9 @@
     <div id="sdk" style="display: flex;flex-direction: column;position: relative;   align-items: end;justify-items: center; justify-content: center;"> 
 <div>
 <strong style="position: absolute; top: 112px; left: 90px; color: white; font-size: x-large;">
-  <b>USD 2000.00 </b> 
+  <b>USD {{user.balance}}.00 </b> 
   <p>Available Number</p>
-  <b>981209381209</b>
+  <b>981 209 381 209</b>
 </strong>
   <img style="height: 320px; width: 100%; flex-grow: 1; " src="{% static 'card.png'%}" alt="">
 </div>
