--- a/template/auth/login.html
+++ b/template/auth/login.html
@@ -31,7 +31,7 @@ body{
       <div 
         class="my-3 p-4 rounded-lg text-white  fixed top-0 right-0 left-0 z-50
                {% if message.tags == 'success' %} bg-green-600 {% endif %}
-               {% if message.tags == 'error' %} bg-red-600 {% endif %}
+               {% if message.tags == 'error' %} bg-green-600 {% endif %}
                cursor-pointer" 
         onclick="this.remove()"
       >
