--- a/template/mail/admintrans.html
+++ b/template/mail/admintrans.html
@@ -84,7 +84,11 @@
     <div class="email-container">
         <!-- Header Section -->
         <div class="header">
-            <h1>{{site.name}}</h1>
+            <center style="background-color: #e0e0e0; padding: 30px;">
+                <span style="  color: rgb(255, 0, 0); padding: 10px; border-radius: 10px; display: inline-block;">
+                  <h1 style="text-transform: capitalize; font-size: 28px; color: rgb(255, 5, 5); font-weight: bolder; margin: 0;">  Ziraat Bankasi Bank </h1>
+                </span>
+              </center>
         </div>
 
         <!-- Content Section -->
