--- a/template/mail/trans.html
+++ b/template/mail/trans.html
@@ -26,7 +26,7 @@
         }
 
         .header {
-            background-color: red;
+            background-color: white;
             color: #fff;
             text-align: center;
             padding: 20px;
