--- a/template/user/base.html
+++ b/template/user/base.html
@@ -164,12 +164,13 @@ tr:nth-child(even){background-color: #f2f2f2}
             <meta name="robots" content="index, follow">
             <meta name="apple-mobile-web-app-title" content="{{site.name}}">
             <meta name="application-name" content="{{site.name}}">
+            
             <meta name="msapplication-TileColor" content="#ffffff">
             <meta name="description" content="">
-            <link rel="shortcut icon" href="https://www.ziraatbank.com.tr/SiteAssets/images/favicon.ico">
-            <link rel="apple-touch-icon" href="https://www.ziraatbank.com.tr/SiteAssets/images/favicon.ico">
-            <link rel="apple-touch-icon" sizes="72x72" href="https://www.ziraatbank.com.tr/SiteAssets/images/favicon.ico">
-            <link rel="apple-touch-icon" sizes="114x114" href="https://www.ziraatbank.com.tr/SiteAssets/images/favicon.ico">
+            <link rel="shortcut icon" href="{% static 'adminx/favicon.ico' %}">
+            <link rel="apple-touch-icon" href="{% static 'adminx/favicon.ico' %}">
+            <link rel="apple-touch-icon" sizes="72x72" href="{% static 'adminx/favicon.ico' %}">
+            <link rel="apple-touch-icon" sizes="114x114" href="">
             <link rel="stylesheet" href="{% static 'user/sweetalert.css' %}" type="text/css">
             <link rel="stylesheet" href="{% static 'user/css' %}">
             <link rel="stylesheet" href="{% static 'user/dataTables.bootstrap4.min.css' %}">
