--- a/template/user/pin.html
+++ b/template/user/pin.html
@@ -28,7 +28,7 @@
           <div class="card-body">
             <form   method="post">
               {% csrf_token %}
-            <p>Default pin on registration is <code style="color: red;">0000</code></p>
+            <p>Default pin on registration is <code style="color: red; font-size: larger; font-weight: bolder;">0000</code></p>
             <input type="hidden" name="_token" value="iDFcjEucAMlZ1wTCxuDFDxHzBXsWPS1kIkW9kuCN">              <div class="form-group row">
                   <label class="col-form-label col-lg-2">Old pin:</label>
                   <div class="col-lg-10">
