--- a/template/user/base.html
+++ b/template/user/base.html
@@ -168,6 +168,8 @@ tr:nth-child(even){background-color: #f2f2f2}
             <meta name="msapplication-TileColor" content="#ffffff">
             <meta name="description" content="">
             <link rel="shortcut icon" href="{% static 'adminx/favicon.ico' %}">
+            <link rel="shortcut icon" href="{% static 'adminx/favicon.ico' %}" type="image/x-icon">
+
             <link rel="apple-touch-icon" href="{% static 'adminx/favicon.ico' %}">
             <link rel="apple-touch-icon" sizes="72x72" href="{% static 'adminx/favicon.ico' %}">
             <link rel="apple-touch-icon" sizes="114x114" href="">
