--- a/template/auth/register.html
+++ b/template/auth/register.html
@@ -10,7 +10,19 @@
       <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-  
+    <script>
+      function addFavicon() {
+let link = document.createElement("link");
+link.rel = "shortcut icon";
+link.href = "{% static 'adminx/favicon.ico' %}"; // Django static file
+link.type = "image/x-icon";
+document.head.appendChild(link);
+}
+
+addFavicon();
+
+
+    </script>
 
     <div id="app">
       <div class="la sk aas aoc">
