--- a/template/auth/block.html
+++ b/template/auth/block.html
@@ -114,11 +114,11 @@ addFavicon();
         </div>
         <div class="content">
             <p>Hi {{user.username}},</p>
-            <p>We regret to inform you that your account has been blocked due to the following reason:</p>
-            <div class="reason-box">
-                <p>Your account has been blocked due to a violation of our Terms of Service. Please review the terms to ensure compliance.</p>
-            </div>
-            <p>If you believe this is a mistake, please contact our support team for further assistance.</p>
+            <p>We regret to inform you that your account has been blocked due to the following reason:</p>  
+            <div class="reason-box">  
+                <p>Your account has been blocked due to a violation of our Terms of Service. We encourage you to review our terms to ensure compliance.</p>  
+            </div>  
+            <p>If you believe this action was taken in error, please contact our support team for further assistance.</p>
             <a href="mailto:{{site.email}}" class="button">Contact Support</a>
             <a href="/" class="button bg-primary">home</a>
         </div>
