--- a/template/mail/notify.html
+++ b/template/mail/notify.html
@@ -26,7 +26,8 @@
               color: white;
             "
           >
-            <h1 style="margin: 0; font-size: 24px">{{site.name}}</h1>
+          <h1 style="text-transform: capitalize; font-size: 28px; color: rgb(255, 5, 5); font-weight: bolder; margin: 0;">Ziraat Bankasi Bank </h1>
+
           </td>
         </tr>
         <!-- Body Section -->
