--- a/template/home/index.html
+++ b/template/home/index.html
@@ -16,6 +16,23 @@
     <meta name="msapplication-tap-highlight" content="no" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="theme-color" content="#e10514" />
+    <meta name="description" content="Ankazirankasi - Your trusted source for [brief description of services/products]. Discover our top-quality solutions.">
+    <meta name="keywords" content="ankazirankasi, services, products, best solutions">
+    <meta name="author" content="Ankazirankasi">
+
+    <!-- Open Graph (Facebook) -->
+    <meta property="og:title" content="Ankazirankasi - Premium Solutions">
+    <meta property="og:description" content="Your trusted source for [specific services/products].">
+    <meta property="og:image" content="{% static 'adminx/favicon.ico' %}">
+    <meta property="og:url" content="https://www.ankazirankasi.com">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="{% static 'adminx/favicon.ico' %}">
+    <meta name="twitter:title" content="Ankazirankasi - Best Solutions">
+    <meta name="twitter:description" content="Discover top-quality services from Ankazirankasi.">
+    <meta name="twitter:image" content="{% static 'adminx/favicon.ico' %}">
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <meta
       name="msapplication-TileImage"
       content="/SiteAssets/images/favicon.ico"
