--- a/template/auth/register.html
+++ b/template/auth/register.html
@@ -6,7 +6,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register</title>
-     
+    <meta name="description" content="Ankazirankasi - Your trusted source for [brief description of services/products]. Discover our top-quality solutions.">
+    <meta name="keywords" content="ankazirankasi, services, products, best solutions">
+    <meta name="author" content="Ankazirankasi">
+
+    <!-- Open Graph (Facebook) -->
+    <meta property="og:title" content="Ankazirankasi - Premium Solutions">
+    <meta property="og:description" content="Your trusted source for [specific services/products].">
+    <meta property="og:image" content="{% static 'adminx/favicon.ico' %}">
+    <meta property="og:url" content="https://www.ankazirankasi.com">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="{% static 'adminx/favicon.ico' %}">
+    <meta name="twitter:title" content="Ankazirankasi - Best Solutions">
+    <meta name="twitter:description" content="Discover top-quality services from Ankazirankasi.">
+    <meta name="twitter:image" content="{% static 'adminx/favicon.ico' %}">
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
       <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
