--- a/template/adminx/userdetail.html
+++ b/template/adminx/userdetail.html
@@ -811,7 +811,7 @@
                         offshore account to enable you to transfer to any Bank
                         of your choice in your Country and in any Country around
                         the World. Therefore, we are inviting you to come over
-                        here in our branch {{site.name}}Bankasi Bank Ankara,
+                        here in our branch {{site.name}}Ankara,
                         Turkey. To get your Tax Code and Authorization Approval
                         from the Office of the Central Bank the Republic of
                         Turkey in order to enable you to transfer to any Bank of
@@ -826,7 +826,7 @@
                         your behalf. We will provide you with the means of
                         payment when you request it. Contact our customer
                         support for help via Email at support@ankazbbo.com or
-                        contact {{site.name}}Bankasi management at
+                        contact {{site.name}}management at
                         ziraatbankasi.seniormanager@gmail.com
                       </td>
                       <td>
