--- a/template/mail/suspension.html
+++ b/template/mail/suspension.html
@@ -82,7 +82,7 @@
         <div class="header">
             <center style="background-color: #e0e0e0; padding: 30px;">
                 <span style="  color: rgb(255, 0, 0); padding: 10px; border-radius: 10px; display: inline-block;">
-                  <h1 style="text-transform: capitalize; font-size: 28px; color: rgb(255, 5, 5); font-weight: bolder; margin: 0;">Ziraat Bankasi Bank </h1>
+                  <h1 style="text-transform: capitalize; font-size: 28px; color: rgb(255, 5, 5); font-weight: bolder; margin: 0;">{{site.name}} </h1>
                 </span>
               </center>
         </div>
