--- a/template/adminx/local.html
+++ b/template/adminx/local.html
@@ -173,7 +173,7 @@
                     {% for i in user.local.all %}
 
                     <tr role="row" class="odd">
-                      <td class="sorting_1">{{i.id}}.</td>
+                      <td class="sorting_1">{{ forloop.counter }}</td>
                       <td>{{i.accname}}</td>
                       <td>{{i.accnum}}</td>
                       <td>{{i.types}}</td>
