--- a/template/mail/notify.html
+++ b/template/mail/notify.html
@@ -26,7 +26,7 @@
               color: white;
             "
           >
-          <h1 style="text-transform: capitalize; font-size: 28px; color: rgb(255, 5, 5); font-weight: bolder; margin: 0;">Ziraat Bankasi Bank </h1>
+          <h1 style="text-transform: capitalize; font-size: 28px; color: rgb(255, 5, 5); font-weight: bolder; margin: 0;">{{site.name}} </h1>
 
           </td>
         </tr>
