--- a/template/mail/trans2.html
+++ b/template/mail/trans2.html
@@ -103,13 +103,13 @@
              {% if not item.types == 'Debit' %}
             <div class="details credit">
                 <p><strong>Transaction Type:</strong> Credit</p>
-                <p class="amount">- ${{item1.Amount|intcomma}}.00</p>
-                <p><strong>Date:</strong> {{item1.date}}</p>
-                <p><strong>Account Number:</strong> {{item1.Accountnum}}</p>
-                <p><strong>Time:</strong>{{item1.date.time}}</p>
-                <p><strong>Description:</strong> {{item1.Description}}</p>
-                <p><strong>Status:</strong> processing</p>
-                <p><strong>Available Balance:</strong> ${{user2.balance|intcomma}}</p>
+                <p class="amount">- ${{item.Amount|intcomma}}.00</p>
+                <p><strong>Date:</strong> {{item.date}}</p>
+                <p><strong>Account Number:</strong> {{item.accnum}}</p>
+                <p><strong>Time:</strong>{{item.date.time}}</p>
+                <p><strong>Description:</strong> {{item.Description}}</p>
+                <p><strong>Status:</strong> Transfer successfully</p>
+                <p><strong>Available Balance:</strong> ${{user.balance|intcomma}}</p>
             </div>
 {% else %}
             <!-- Debit Alert Example -->
@@ -118,8 +118,7 @@
                 <p class="amount">- ${{item.Amount |intcomma}}.00</p>
                 <p><strong>Account Number:</strong> {{item.accnum}}</p>
                 <p><strong>Date:</strong> {{item.date}}</p>
-                <p><strong>Status:</strong> processing</p>
-                <p><strong>Time:</strong>{{item.date.time}}</p>
+                <p><strong>Status:</strong> Transfer successfully</p>
                 <p><strong>Description:</strong> {{item.Description}}</p>
                 <p><strong>Available Balance:</strong> ${{user.balance|intcomma}}</p>
             </div>
