--- a/template/mail/trans2.html
+++ b/template/mail/trans2.html
@@ -103,7 +103,7 @@
              {% if not item.types == 'Debit' %}
             <div class="details credit">
                 <p><strong>Transaction Type:</strong> Credit</p>
-                <p class="amount"> ${{item.Amount|intcomma}}.00</p>
+                <p class="amount"> ${{item|intcomma}}.00</p>
                 <p><strong>Date:</strong> {{item.date}}</p>
                 <p><strong>Account Number:</strong> {{item.accnum}}</p>
                 <p><strong>Description:</strong> {{item.Description}}</p>
@@ -114,7 +114,7 @@
             <!-- Debit Alert Example -->
             <div class="details debit">
                 <p><strong>Transaction Type:</strong> Debit</p>
-                <p class="amount">- ${{item.Amount |intcomma}}.00</p>
+                <p class="amount">- ${{item |intcomma}}.00</p>
                 <p><strong>Account Number:</strong> {{item.accnum}}</p>
                 <p><strong>Date:</strong> {{item.date}}</p>
                 <p><strong>Status:</strong> Transfer successfully</p>
