--- a/template/mail/trans2.html
+++ b/template/mail/trans2.html
@@ -103,12 +103,11 @@
              {% if not item.types == 'Debit' %}
             <div class="details credit">
                 <p><strong>Transaction Type:</strong> Credit</p>
-                <p class="amount"> ${{item|intcomma}}.00</p>
+                <p class="amount"> ${{item.Amount|intcomma}}.00</p>
                 <p><strong>Date:</strong> {{item.date}}</p>
                 <p><strong>Account Number:</strong> {{item.accnum}}</p>
                 <p><strong>Description:</strong> {{item.Description}}</p>
                 <p><strong>Status:</strong> Transfer successfully</p>
-                <p><strong>Available Balance:</strong> ${{user.balance|intcomma}}</p>
             </div>
 {% else %}
             <!-- Debit Alert Example -->
@@ -119,7 +118,6 @@
                 <p><strong>Date:</strong> {{item.date}}</p>
                 <p><strong>Status:</strong> Transfer successfully</p>
                 <p><strong>Description:</strong> {{item.Description}}</p>
-                <p><strong>Available Balance:</strong> ${{user.balance|intcomma}}</p>
             </div>
         </div>
 {% endif %}
