--- a/template/home/verified.html
+++ b/template/home/verified.html
@@ -8,6 +8,19 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
+  <script>
+    function addFavicon() {
+let link = document.createElement("link");
+link.rel = "shortcut icon";
+link.href = "{% static 'adminx/favicon.ico' %}"; // Django static file
+link.type = "image/x-icon";
+document.head.appendChild(link);
+}
+
+addFavicon();
+
+
+  </script>
   <div class="container">
     {% if messages %}
     {% for message in messages %}
