--- a/template/mail/admintrans.html
+++ b/template/mail/admintrans.html
@@ -103,6 +103,7 @@
                 <p class="amount"><strong>Transfer Amount:</strong> ${{item.Amount|intcomma}}</p>
                  
                 <p><strong>Recipient Name:</strong> {{item.accname}}</p>
+                <p><strong>Recipient Account:</strong> {{item.accnum}}</p>
                 <p><strong>Type:</strong> {{item.types}}</p>
                 <p><strong>Date:</strong>{{item.date}}</p>
                 <p><strong>Time:</strong>{{item.date.time}}</p>
